test/runtime/fail/fn/lone_return.hy

// expect error: Cannot return from package top level

{
	return
}
